op shelves are heroes, hide hero collection if one is visible (bug 923236)
some fixes

--- a/hearth/media/css/listing.styl
+++ b/hearth/media/css/listing.styl
@@ -229,60 +229,6 @@ $dot-size = 13px;
     }
 }
 
-.operator {
-    .featured-header h3 {
-        background-repeat: no-repeat;
-        background-size: 29px auto;
-        color: $grey-gardens-gray;
-        font-weight: 400;
-        padding-left: 40px;
-    }
-    &[class*="operator-dt-"],
-    &[class*="operator-deutsche_telekom-"] {
-        .featured-header h3 {
-            background-image: url(../img/carriers/deutsche_telekom.svg);
-            background-position: 0 27.75%;
-        }
-    }
-    &[class*="operator-congstar-"], {
-        .featured-header h3 {
-            background-image: url(../img/carriers/congstar.png);
-            background-position: 0 27.75%;
-        }
-    }
-    &[class*="operator-movistar-"] {
-        .featured-header h3 {
-            background-image: url(../img/carriers/movistar.svg);
-            background-position: 0 0;
-        }
-    }
-    &[class*="operator-telenor-"] {
-        .featured-header h3 {
-            background-image: url(../img/carriers/telenor.svg);
-            background-position: 0 0;
-            background-size: 24px auto;
-            padding-left: 35px;
-        }
-    }
-    &[class*="operator-america_movil-"] {
-        .featured-header h3 {
-            background-image: url(../img/carriers/claro.png);
-            background-position: 0 0;
-            background-size: 18px auto;
-            padding-left: 30px;
-        }
-    }
-    &[class="operator-telefonica-br"],
-    &[class*="operator-vivo-"] {
-        .featured-header h3 {
-            background-image: url(../img/carriers/vivo.png);
-            background-position: 0 0;
-            background-size: 18px auto;
-            padding-left: 30px;
-        }
-    }
-}
-
 // Grid
 // store graphic, name, price in a floated grid (3 tiles wide at 320).
 
